modules/gdscript/tests/scripts/analyzer/errors/final_classes.gd
@final @abstract class AbstractFinalClass:
    pass

@final class A:
    pass

class B extends A:
    pass

func test():
    pass
